@@ -1,3 +1,9 @@
+2006-12-28  Tor Lillqvist  <tml@novell.com>
+
+	* gthread-win32.c (g_thread_impl_init): Correct link to discussion
+	about CRITICAL_SECTIONs vs. mutexes. Thanks to Felix Kater for
+	pointing this out.
+
 2006-08-15  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.12.2 ===
